# chitra

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  chitra.cpp  pch.hpp  window.cpp  window.hpp
.github/workflows/: linux-build.yml  windows-build.yml
cmake/: genDocs.cmake  glad.cmake  glfw.cmake  imgui.cmake  searchLib.cmake  tests.cmake
layers/: imguiLayer.cpp  imguiLayer.hpp  textureViewLayer.cpp  textureViewLayer.hpp
mediaUtils/: decoder.cpp  decoder.hpp  loader.cpp  loader.hpp  texture.cpp  texture.hpp  textureView.cpp  textureView.hpp
tests/: imgui_Demo_Test.cpp  imgui_test.cpp  input_logger_test.cpp  texture_view_test.cpp
windowing/: window.cpp  window.hpp
